<resources>
    <string name="app_name">W.K.</string>
    <string name="hello_world">Hello world!</string>
    <string name="cardChose">卡片选择:</string>
    <string name="showerCard">洗澡卡</string>
    <string name="drinkCard">饮水卡</string>
    <string name="boiledCard">开水卡</string>
    <string name="enteringManage">进入管理后台</string>
    <string name="coverOrNot">覆盖数据</string>
    <string name="yuan">元</string>
    <string name="current">余额：</string>
    <string name="addMoney">充值：</string>
    <string name="writeMoney">写入</string>
    <string name="adminManage">管理入口</string>
    <string name="moneyManage">金额管理</string>
    <string name="msgBox">留言板</string>
    <string name="title_activity_intent_test">Intent_test</string>
    <string name="clear">清理所有图片缓存</string>
    <string name="confirm">确定</string>
    <string name="input">输入</string>
    <string name="cancel">取消</string>
    <string name="sendTo">发送给</string>
    <string name="shareTo">分享</string>
    <string name="customMsgTitle">消息标题</string>
    <string name="copied">已复制</string>
    <string name="sent">已发送</string>
    <string name="selectQq">选择QQ号</string>
    <string name="inputQq">输入QQ号</string>
    <string name="inputID">请输入您的ID</string>
    <string name="newContacts">新建联系人</string>
    <string name="allContacts">所有人</string>
    <string name="Turing">WiKi</string>
    <string name="setting">设置</string>
    <string name="networkError">网络错误</string>
    <string name="personSetting">账号设置</string>
    <string name="ID">ID标识</string>
    <string name="qqNum">QQ号码</string>
    <string name="appearanceSetting">个人设置</string>
    <string name="logSetting">日志设置</string>
    <string name="saveLog">保存日志</string>
    <string name="saveLogSummary">保存日志到手机便于调试</string>
    <string name="nfcSetting">NFC设置</string>
    <string name="otherSetting">其它设置</string>
    <string name="enableNFC">开启NFC功能</string>
    <string name="isEnterSend">回车键发送消息</string>
    <string name="inputMsgContent">输入消息内容</string>
    <string name="inputToastMsgContent">输入浮动消息内容</string>
    <string name="longPressDeleteContact">长按联系人可移除</string>
    <string name="lastLoginTime">最后上线</string>
    <string name="reply">回复</string>
    <string name="replyMessage">回复消息</string>
    <string name="enterToReplyMessage">回复消息</string>
    <string name="underTest">测试中</string>
    <string name="saveTipMsg">保存所有聊天记录</string>
    <string name="title_activity_love_counter">LoveCounter</string>
    <string name="weHaveBeenTogetherFor">我们一起走过了</string>
    <string name="days">天啦</string>
    <string name="day">天</string>
    <string name="longPressToSetWallpaper">长按设置为壁纸</string>
    <string name="contactDeleted">"已移除联系人 "</string>
    <string name="deleteContactError">移除联系人出错\n</string>
    <string name="warmTips">温馨提示</string>
    <string name="interfaceCanBeSlidedLeftAndRight">界面可左右滑动</string>
    <string name="updateTips">升级提示</string>
    <string name="findNewVersion">发现新版本\n</string>
    <string name="update">更新</string>
    <string name="find">发现</string>
    <string name="betaVersion">的测试版\n\t\n</string>
    <string name="betaUpdate">Beta更新</string>
    <string name="selectAll">全选</string>
    <string name="cancelSelectAll">取消全选</string>
    <string name="with">与</string>
    <string name="chatRecords">的聊天记录</string>
    <string name="deleteRecordsError">"删除记录出错 "</string>
    <string name="NotSelectAnyRecords">未选中任何记录</string>
    <string name="setWallpaperDone">成功设置为壁纸</string>
    <string name="settingWallpaper">正在设置壁纸</string>
    <string name="setWallpaperFailed">设置壁纸失败</string>
    <string name="pleaseInputQqNum">请输入QQ号</string>
    <string name="pleaseRegisterId">请注册ID</string>
    <string name="longPressToSelectIcon">长按选择头像</string>
    <string name="longPressToSetting">长按太阳进入设置</string>
    <string name="NotMac">这不是Mac哦</string>
    <string name="joke">笑话</string>
    <string name="getJokes">就来个段子可好？</string>
    <string name="ImageCacheCleared">该图片缓存已清理</string>
    <string name="reloading">重载中</string>
    <string name="ImageSourceSetting">壁纸源</string>
    <string name="appSourceSetting">APP更新源</string>
    <string name="_1">1%</string>
    <string name="ringtone">通知铃声</string>
    <string name="conditionToChangeID">QQ为空才可更改ID</string>
    <string name="broadcast">广播</string>
    <string name="action_share">分享</string>
    <string name="action_reply">回复</string>
	<string name="please_input_msg">输入消息内容</string>
    <string name="new_message_notification_title_template">New message: %1$s</string>
    <string name="about">关于</string>
    <string name="about_app">Wilson and Karina</string>
    <string name="contacts">联系人</string>
    <string name="wkCantDothat">WiKi 拒绝</string>
    <string name="last_login_time">最后上线时间</string>
    <string name="test_msg">这是一条测试的消息，需注意消息的气泡的对话框宽度，padding是否正常，复选框是否以为.这是一条测试的消息，需注意消息的气泡的对话框宽度，padding是否正常，复选框是否以为</string>
    <string name="label_button_cta_canteen_intro">开始吧</string>
    <string name="description_canteen_intro1">Secret</string>
    <string name="title_canteen_intro2">title_canteen_intro2</string>
    <string name="description_canteen_intro2">description_canteen_intro2</string>
    <string name="title_canteen_intro3">title_canteen_intro3</string>
    <string name="description_canteen_intro3">description_canteen_intro3</string>
    <string name="title_canteen_intro1">At first sight marks one\'s destiny</string>
    <string name="love_fingers">Love, promised between the fingers</string>
    <string name="fingers_love">Finger rift, twisted in the love</string>
    <string name="show_net_type">显示网络状态</string>
    <string name="downloadAgain">重新下载</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display cSend</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_tab_test">TabTestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>