<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="match_parent"
	android:background="@drawable/mac_notify_window">

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/broadcast"
		android:textSize="10sp"
		android:textColor="#fff"
		android:layout_marginRight="4dp"
		android:layout_marginLeft="4dp"
		android:id="@+id/time"
		android:layout_alignParentTop="true"
		android:layout_alignParentEnd="true" />

	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/app_name"
		android:textSize="10sp"
		android:textColor="#fff"
		android:id="@+id/title"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true" />

	<TextView
		android:layout_marginBottom="2dp"
		android:layout_alignBottom="@+id/icon"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:gravity="center"
		android:text="@string/hello_world"
		android:textColor="#000"
		android:id="@+id/text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/time" />

	<ImageView
		android:id="@+id/icon"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:src="@drawable/ic_incognito" />

</RelativeLayout>

