<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_alignParentBottom="true"
	android:orientation="vertical"
	android:paddingLeft="6dp"
	android:paddingRight="6dp">

	<TextView
		android:id="@+id/tv_setWallpaper"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:gravity="center"
		android:background="@drawable/rounded_rectangle_white"
		android:layout_marginBottom="4dp"
		android:text="First Item"/>

	<TextView
		android:id="@+id/tv_saveToSd"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:background="@drawable/rounded_rectangle_white"
		android:gravity="center"
		android:layout_marginBottom="4dp"
		android:text="Second Item"/>

	<TextView
		android:id="@+id/tv_share"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:background="@drawable/rounded_rectangle_white"
		android:gravity="center"
		android:layout_marginBottom="12dp"
		android:text="@string/shareTo"/>

	<TextView
		android:id="@+id/tv_clear"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:background="@drawable/rounded_rectangle_white"
		android:gravity="center"
		android:clickable="true"
		android:text="@string/clear"
		android:textColor="#FF0F00"
		android:layout_marginBottom="4dp"/>

	<TextView
		android:id="@+id/tv_cancel"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:background="@drawable/rounded_rectangle_white"
		android:gravity="center"
		android:text="@string/cancel"
		android:textColor="#FF0F00"/>

</LinearLayout>

