<?xml version="1.0" encoding="utf-8"?>
<cc.yuyeye.wk.Util.ViewContainer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:padding="12dp"
    android:background="#00000000">

    <LinearLayout
		android:id="@+id/pop_view_content_view"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/rounded_rectangle_white_bord"
		android:orientation="vertical"
		android:padding="12dp">

		
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/msgTitle"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1.0"
				android:gravity="left"
				android:includeFontPadding="false"
				android:paddingStart="2dp"
				android:text="@string/app_name"
				android:textColor="#999999"
				android:textSize="13sp"
				tools:ignore="RtlSymmetry" />

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:textColor="#999999"
				android:text="05:04"
				android:textSize="13sp"
				android:layout_marginRight="4dp"
				android:id="@+id/msgTime" />

		</LinearLayout>

		<TextView
			android:id="@+id/pop_view_text"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="5dp"
			android:gravity="left"
			android:textColor="#000000"
			android:textSize="15sp"
			android:paddingStart="2dp"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
            android:layout_marginTop="5dp"
			android:gravity="bottom">

			<EditText
				android:id="@+id/replyContent"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:textColor="#000000"
				android:textSize="15sp"
				android:padding="5dp"
                android:layout_marginEnd="4dp"
				android:hint="@string/replyMessage"
				android:textColorHint="#44000000"
				android:background="@drawable/rounded_rectangle_white_bord"
				android:layout_weight="1"
				android:imeOptions="actionSend"
				android:singleLine="true"/>

			<Button
				android:text="@string/reply"
				android:theme="@style/AppTheme"
				android:layout_width="48dp"
				android:layout_height="40dp"
				android:textSize="15sp"
				android:textColor="#ffffff"
				android:id="@+id/replyBtn"
				android:background="@drawable/rounded_rectangle_blue"/>

		</LinearLayout>

	</LinearLayout>

</cc.yuyeye.wk.Util.ViewContainer>
